--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,35 @@ services:
     environment:
       PORT: "8080"
 
+  db:
+    image: "mysql:8.0.33-oracle"
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: "qwerty"
+      MYSQL_DATABASE: "db"
+    networks:
+      - "internal"
+    volumes:
+      - "database_mysql:/var/lib/mysql"
+
+  phpmyadmin:
+    image: "phpmyadmin/phpmyadmin"
+    depends_on:
+      - "db"
+    environment:
+      PMA_HOST: "db" # Note the "mysql". Must be the name of the what you used as the mysql service.
+      PMA_USER: "root"
+      PMA_PORT: "3306"
+      PMA_PASSWORD: "qwerty"
+    ports:
+      - "9090:80"
+    restart: "always"
+    networks:
+      - "internal"
+
+volumes:
+  database_mysql:
 
 networks:
   internal:
