implements working getall, create and update sql methods for mysql package

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - "database_mysql:/var/lib/mysql"
 
   phpmyadmin:
+    platform: linux/x86_64
     image: "phpmyadmin/phpmyadmin"
     depends_on:
       - "db"
