--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     networks:
       - "internal"
     volumes:
-      - "database_mysql:/var/lib/mysql"
+      - "./db/sql/weapons.sql:/seed.sql"
 
   phpmyadmin:
     platform: linux/x86_64
