--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     networks:
       - "internal"
     volumes:
-      - "./db/sql/weapons.sql:/docker-entrypoint-initdb.d/seed.sql"
+      - "./internal/db/sql/weapons.sql:/docker-entrypoint-initdb.d/seed.sql"
 
   phpmyadmin:
     platform: linux/x86_64
